# oracles

./: Cargo.toml
boosting_oracles/: Cargo.toml
boosting_oracles/src/: assignment.rs  lib.rs
hex_assignments/: Cargo.toml
hex_assignments/src/: lib.rs
mobile_verifier/: Cargo.toml
mobile_verifier/src/: coverage.rs  lib.rs  reward_shares.rs
mobile_verifier/src/boosting_oracles/: data_sets.rs  mod.rs
mobile_verifier/src/cli/: server.rs  verify_disktree.rs
mobile_verifier/tests/integrations/: boosting_oracles.rs
mobile_verifier/tests/integrations/common/: mod.rs
