[package]
name = "boosting-oracles"
version = "0.1.0"
description = "Boosting Oracles"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
hextree = { workspace = true }
sqlx = {version = "*", features = ["runtime-tokio-rustls"]}
rust_decimal = { workspace = true}
rust_decimal_macros = { workspace = true}
helium-proto = {workspace = true}
